force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Code Merge- Deprecate after dependency resolved</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Category__c</fullName>
        <label>Group Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Mid-Size Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <description>Full legal name of the Employer group</description>
        <inlineHelpText>Full legal name of the Employer group</inlineHelpText>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_City__c</fullName>
        <formula>Rating_Zipcode__r.City__c</formula>
        <label>Rating City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_County__c</fullName>
        <formula>Rating_Zipcode__r.County__c</formula>
        <label>Rating County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Region__c</fullName>
        <formula>Rating_Zipcode__r.Rating_Region__c</formula>
        <label>Rating Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <formula>Rating_Zipcode__r.State__c</formula>
        <label>Rating State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Zipcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating Zipcode</label>
        <referenceTo>Rating_Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_lookup__c</fullName>
        <formula>Rating_Zipcode__r.Test5__c</formula>
        <label>Rating Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIN_EIN__c</fullName>
        <label>TIN/EIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>